ESIR2/tlcwhile/src/main/antlr_grammar/While_astParser.java
// $ANTLR 3.5.3 While_ast.g 2026-01-19 11:54:07
package antlr_grammar;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class While_astParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ASSIGN", "ASSIGN_NODE", "BLOCK", 
		"CALL", "COMMENT", "CONS", "DO", "ELSE", "EQ", "EXPRS", "FALSE_NODE", 
		"FI", "FOR", "FOREACH", "FUNC", "FUNCTION", "HEAD", "IF", "IN", "LIST", 
		"NIL", "NOP", "NOP_NODE", "OD", "PARAM", "PROG", "READ", "RESULT", "SYMBOL", 
		"TAIL", "THEN", "TRUE_NODE", "VARIABLE", "VARS", "WHILE", "WRITE", "WS", 
		"'%'", "'('", "')'", "','", "':'", "';'", "'false'", "'true'"
	};
	public static final int EOF=-1;
	public static final int T__41=41;
	public static final int T__42=42;
	public static final int T__43=43;
	public static final int T__44=44;
	public static final int T__45=45;
	public static final int T__46=46;
	public static final int T__47=47;
	public static final int T__48=48;
	public static final int ASSIGN=4;
	public static final int ASSIGN_NODE=5;
	public static final int BLOCK=6;
	public static final int CALL=7;
	public static final int COMMENT=8;
	public static final int CONS=9;
	public static final int DO=10;
	public static final int ELSE=11;
	public static final int EQ=12;
	public static final int EXPRS=13;
	public static final int FALSE_NODE=14;
	public static final int FI=15;
	public static final int FOR=16;
	public static final int FOREACH=17;
	public static final int FUNC=18;
	public static final int FUNCTION=19;
	public static final int HEAD=20;
	public static final int IF=21;
	public static final int IN=22;
	public static final int LIST=23;
	public static final int NIL=24;
	public static final int NOP=25;
	public static final int NOP_NODE=26;
	public static final int OD=27;
	public static final int PARAM=28;
	public static final int PROG=29;
	public static final int READ=30;
	public static final int RESULT=31;
	public static final int SYMBOL=32;
	public static final int TAIL=33;
	public static final int THEN=34;
	public static final int TRUE_NODE=35;
	public static final int VARIABLE=36;
	public static final int VARS=37;
	public static final int WHILE=38;
	public static final int WRITE=39;
	public static final int WS=40;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public While_astParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public While_astParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return While_astParser.tokenNames; }
	@Override public String getGrammarFileName() { return "While_ast.g"; }


	public static class start_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "start"
	// While_ast.g:19:1: start : program EOF -> ^( PROG program ) ;
	public final While_astParser.start_return start() throws RecognitionException {
		While_astParser.start_return retval = new While_astParser.start_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token EOF2=null;
		ParserRuleReturnScope program1 =null;

		CommonTree EOF2_tree=null;
		RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
		RewriteRuleSubtreeStream stream_program=new RewriteRuleSubtreeStream(adaptor,"rule program");

		try {
			// While_ast.g:20:5: ( program EOF -> ^( PROG program ) )
			// While_ast.g:20:7: program EOF
			{
			pushFollow(FOLLOW_program_in_start110);
			program1=program();
			state._fsp--;

			stream_program.add(program1.getTree());
			EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start112);  
			stream_EOF.add(EOF2);


			// AST REWRITE
			// elements: program
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 20:19: -> ^( PROG program )
			{
				// While_ast.g:20:22: ^( PROG program )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PROG, "PROG"), root_1);
				adaptor.addChild(root_1, stream_program.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "start"


	public static class program_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "program"
	// While_ast.g:23:1: program : ( function )+ ;
	public final While_astParser.program_return program() throws RecognitionException {
		While_astParser.program_return retval = new While_astParser.program_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope function3 =null;


		try {
			// While_ast.g:24:5: ( ( function )+ )
			// While_ast.g:24:7: ( function )+
			{
			root_0 = (CommonTree)adaptor.nil();


			// While_ast.g:24:7: ( function )+
			int cnt1=0;
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==FUNCTION) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// While_ast.g:24:8: function
					{
					pushFollow(FOLLOW_function_in_program138);
					function3=function();
					state._fsp--;

					adaptor.addChild(root_0, function3.getTree());

					}
					break;

				default :
					if ( cnt1 >= 1 ) break loop1;
					EarlyExitException eee = new EarlyExitException(1, input);
					throw eee;
				}
				cnt1++;
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "program"


	public static class function_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "function"
	// While_ast.g:27:1: function : FUNCTION SYMBOL ':' definition -> ^( FUNC SYMBOL definition ) ;
	public final While_astParser.function_return function() throws RecognitionException {
		While_astParser.function_return retval = new While_astParser.function_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token FUNCTION4=null;
		Token SYMBOL5=null;
		Token char_literal6=null;
		ParserRuleReturnScope definition7 =null;

		CommonTree FUNCTION4_tree=null;
		CommonTree SYMBOL5_tree=null;
		CommonTree char_literal6_tree=null;
		RewriteRuleTokenStream stream_45=new RewriteRuleTokenStream(adaptor,"token 45");
		RewriteRuleTokenStream stream_SYMBOL=new RewriteRuleTokenStream(adaptor,"token SYMBOL");
		RewriteRuleTokenStream stream_FUNCTION=new RewriteRuleTokenStream(adaptor,"token FUNCTION");
		RewriteRuleSubtreeStream stream_definition=new RewriteRuleSubtreeStream(adaptor,"rule definition");

		try {
			// While_ast.g:28:5: ( FUNCTION SYMBOL ':' definition -> ^( FUNC SYMBOL definition ) )
			// While_ast.g:28:7: FUNCTION SYMBOL ':' definition
			{
			FUNCTION4=(Token)match(input,FUNCTION,FOLLOW_FUNCTION_in_function158);  
			stream_FUNCTION.add(FUNCTION4);

			SYMBOL5=(Token)match(input,SYMBOL,FOLLOW_SYMBOL_in_function160);  
			stream_SYMBOL.add(SYMBOL5);

			char_literal6=(Token)match(input,45,FOLLOW_45_in_function162);  
			stream_45.add(char_literal6);

			pushFollow(FOLLOW_definition_in_function164);
			definition7=definition();
			state._fsp--;

			stream_definition.add(definition7.getTree());

			// AST REWRITE
			// elements: SYMBOL, definition
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 29:7: -> ^( FUNC SYMBOL definition )
			{
				// While_ast.g:29:10: ^( FUNC SYMBOL definition )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(FUNC, "FUNC"), root_1);
				adaptor.addChild(root_1, stream_SYMBOL.nextNode());
				adaptor.addChild(root_1, stream_definition.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "function"


	public static class definition_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "definition"
	// While_ast.g:32:1: definition : READ input '%' commands '%' WRITE output -> ^( PARAM input ) ^( BLOCK commands ) ^( RESULT output ) ;
	public final While_astParser.definition_return definition() throws RecognitionException {
		While_astParser.definition_return retval = new While_astParser.definition_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token READ8=null;
		Token char_literal10=null;
		Token char_literal12=null;
		Token WRITE13=null;
		ParserRuleReturnScope input9 =null;
		ParserRuleReturnScope commands11 =null;
		ParserRuleReturnScope output14 =null;

		CommonTree READ8_tree=null;
		CommonTree char_literal10_tree=null;
		CommonTree char_literal12_tree=null;
		CommonTree WRITE13_tree=null;
		RewriteRuleTokenStream stream_READ=new RewriteRuleTokenStream(adaptor,"token READ");
		RewriteRuleTokenStream stream_41=new RewriteRuleTokenStream(adaptor,"token 41");
		RewriteRuleTokenStream stream_WRITE=new RewriteRuleTokenStream(adaptor,"token WRITE");
		RewriteRuleSubtreeStream stream_output=new RewriteRuleSubtreeStream(adaptor,"rule output");
		RewriteRuleSubtreeStream stream_input=new RewriteRuleSubtreeStream(adaptor,"rule input");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// While_ast.g:33:5: ( READ input '%' commands '%' WRITE output -> ^( PARAM input ) ^( BLOCK commands ) ^( RESULT output ) )
			// While_ast.g:33:7: READ input '%' commands '%' WRITE output
			{
			READ8=(Token)match(input,READ,FOLLOW_READ_in_definition198);  
			stream_READ.add(READ8);

			pushFollow(FOLLOW_input_in_definition200);
			input9=input();
			state._fsp--;

			stream_input.add(input9.getTree());
			char_literal10=(Token)match(input,41,FOLLOW_41_in_definition202);  
			stream_41.add(char_literal10);

			pushFollow(FOLLOW_commands_in_definition204);
			commands11=commands();
			state._fsp--;

			stream_commands.add(commands11.getTree());
			char_literal12=(Token)match(input,41,FOLLOW_41_in_definition206);  
			stream_41.add(char_literal12);

			WRITE13=(Token)match(input,WRITE,FOLLOW_WRITE_in_definition208);  
			stream_WRITE.add(WRITE13);

			pushFollow(FOLLOW_output_in_definition210);
			output14=output();
			state._fsp--;

			stream_output.add(output14.getTree());

			// AST REWRITE
			// elements: commands, output, input
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (CommonTree)adaptor.nil();
			// 34:7: -> ^( PARAM input ) ^( BLOCK commands ) ^( RESULT output )
			{
				// While_ast.g:34:10: ^( PARAM input )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(PARAM, "PARAM"), root_1);
				adaptor.addChild(root_1, stream_input.nextTree());
				adaptor.addChild(root_0, root_1);
				}

				// While_ast.g:34:25: ^( BLOCK commands )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(BLOCK, "BLOCK"), root_1);
				adaptor.addChild(root_1, stream_commands.nextTree());
				adaptor.addChild(root_0, root_1);
				}

				// While_ast.g:34:43: ^( RESULT output )
				{
				CommonTree root_1 = (CommonTree)adaptor.nil();
				root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(RESULT, "RESULT"), root_1);
				adaptor.addChild(root_1, stream_output.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "definition"


	public static class input_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "input"
	// While_ast.g:37:1: input : ( vars | -> ^( VARS ) );
	public final While_astParser.input_return input() throws RecognitionException {
		While_astParser.input_return retval = new While_astParser.input_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope vars15 =null;


		try {
			// While_ast.g:38:5: ( vars | -> ^( VARS ) )
			int alt2=2;
			int LA2_0 = input.LA(1);
			if ( (LA2_0==VARIABLE) ) {
				alt2=1;
			}
			else if ( (LA2_0==41) ) {
				alt2=2;
			}

			else {
				NoViableAltException nvae =
					new NoViableAltException("", 2, 0, input);
				throw nvae;
			}

			switch (alt2) {
				case 1 :
					// While_ast.g:38:7: vars
					{
					root_0 = (CommonTree)adaptor.nil();


					pushFollow(FOLLOW_vars_in_input256);
					vars15=vars();
					state._fsp--;

					adaptor.addChild(root_0, vars15.getTree());

					}
					break;
				case 2 :
					// While_ast.g:39:7: 
					{

					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 39:7: -> ^( VARS )
					{
						// While_ast.g:39:10: ^( VARS )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(VARS, "VARS"), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;

			}
			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "input"


	public static class output_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "output"
	// While_ast.g:42:1: output : vars ;
	public final While_astParser.output_return output() throws RecognitionException {
		While_astParser.output_return retval = new While_astParser.output_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		ParserRuleReturnScope vars16 =null;


		try {
			// While_ast.g:43:5: ( vars )
			// While_ast.g:43:7: vars
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_vars_in_output289);
			vars16=vars();
			state._fsp--;

			adaptor.addChild(root_0, vars16.getTree());

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "output"


	public static class commands_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "commands"
	// While_ast.g:46:1: commands : command ( ';' command )* ;
	public final While_astParser.commands_return commands() throws RecognitionException {
		While_astParser.commands_return retval = new While_astParser.commands_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token char_literal18=null;
		ParserRuleReturnScope command17 =null;
		ParserRuleReturnScope command19 =null;

		CommonTree char_literal18_tree=null;

		try {
			// While_ast.g:47:5: ( command ( ';' command )* )
			// While_ast.g:47:7: command ( ';' command )*
			{
			root_0 = (CommonTree)adaptor.nil();


			pushFollow(FOLLOW_command_in_commands307);
			command17=command();
			state._fsp--;

			adaptor.addChild(root_0, command17.getTree());

			// While_ast.g:47:15: ( ';' command )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==46) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// While_ast.g:47:16: ';' command
					{
					char_literal18=(Token)match(input,46,FOLLOW_46_in_commands310); 
					char_literal18_tree = (CommonTree)adaptor.create(char_literal18);
					adaptor.addChild(root_0, char_literal18_tree);

					pushFollow(FOLLOW_command_in_commands312);
					command19=command();
					state._fsp--;

					adaptor.addChild(root_0, command19.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "commands"


	public static class command_return extends ParserRuleReturnScope {
		CommonTree tree;
		@Override
		public CommonTree getTree() { return tree; }
	};


	// $ANTLR start "command"
	// While_ast.g:49:1: command : ( NOP -> ^( NOP_NODE ) | vars ASSIGN exprs -> ^( ASSIGN_NODE vars exprs ) | IF expression THEN commands ( ELSE commands )? FI -> ^( IF expression ^( BLOCK commands ) ( ^( ELSE commands ) )? ) | WHILE expression DO commands OD -> ^( WHILE expression ^( BLOCK commands ) ) | FOR expression DO commands OD -> ^( FOR expression ^( BLOCK commands ) ) | FOREACH VARIABLE IN expression DO commands OD -> ^( FOREACH VARIABLE expression ^( BLOCK commands ) ) );
	public final While_astParser.command_return command() throws RecognitionException {
		While_astParser.command_return retval = new While_astParser.command_return();
		retval.start = input.LT(1);

		CommonTree root_0 = null;

		Token NOP20=null;
		Token ASSIGN22=null;
		Token IF24=null;
		Token THEN26=null;
		Token ELSE28=null;
		Token FI30=null;
		Token WHILE31=null;
		Token DO33=null;
		Token OD35=null;
		Token FOR36=null;
		Token DO38=null;
		Token OD40=null;
		Token FOREACH41=null;
		Token VARIABLE42=null;
		Token IN43=null;
		Token DO45=null;
		Token OD47=null;
		ParserRuleReturnScope vars21 =null;
		ParserRuleReturnScope exprs23 =null;
		ParserRuleReturnScope expression25 =null;
		ParserRuleReturnScope commands27 =null;
		ParserRuleReturnScope commands29 =null;
		ParserRuleReturnScope expression32 =null;
		ParserRuleReturnScope commands34 =null;
		ParserRuleReturnScope expression37 =null;
		ParserRuleReturnScope commands39 =null;
		ParserRuleReturnScope expression44 =null;
		ParserRuleReturnScope commands46 =null;

		CommonTree NOP20_tree=null;
		CommonTree ASSIGN22_tree=null;
		CommonTree IF24_tree=null;
		CommonTree THEN26_tree=null;
		CommonTree ELSE28_tree=null;
		CommonTree FI30_tree=null;
		CommonTree WHILE31_tree=null;
		CommonTree DO33_tree=null;
		CommonTree OD35_tree=null;
		CommonTree FOR36_tree=null;
		CommonTree DO38_tree=null;
		CommonTree OD40_tree=null;
		CommonTree FOREACH41_tree=null;
		CommonTree VARIABLE42_tree=null;
		CommonTree IN43_tree=null;
		CommonTree DO45_tree=null;
		CommonTree OD47_tree=null;
		RewriteRuleTokenStream stream_FI=new RewriteRuleTokenStream(adaptor,"token FI");
		RewriteRuleTokenStream stream_IN=new RewriteRuleTokenStream(adaptor,"token IN");
		RewriteRuleTokenStream stream_FOR=new RewriteRuleTokenStream(adaptor,"token FOR");
		RewriteRuleTokenStream stream_DO=new RewriteRuleTokenStream(adaptor,"token DO");
		RewriteRuleTokenStream stream_ASSIGN=new RewriteRuleTokenStream(adaptor,"token ASSIGN");
		RewriteRuleTokenStream stream_FOREACH=new RewriteRuleTokenStream(adaptor,"token FOREACH");
		RewriteRuleTokenStream stream_NOP=new RewriteRuleTokenStream(adaptor,"token NOP");
		RewriteRuleTokenStream stream_OD=new RewriteRuleTokenStream(adaptor,"token OD");
		RewriteRuleTokenStream stream_VARIABLE=new RewriteRuleTokenStream(adaptor,"token VARIABLE");
		RewriteRuleTokenStream stream_ELSE=new RewriteRuleTokenStream(adaptor,"token ELSE");
		RewriteRuleTokenStream stream_THEN=new RewriteRuleTokenStream(adaptor,"token THEN");
		RewriteRuleTokenStream stream_WHILE=new RewriteRuleTokenStream(adaptor,"token WHILE");
		RewriteRuleTokenStream stream_IF=new RewriteRuleTokenStream(adaptor,"token IF");
		RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
		RewriteRuleSubtreeStream stream_exprs=new RewriteRuleSubtreeStream(adaptor,"rule exprs");
		RewriteRuleSubtreeStream stream_vars=new RewriteRuleSubtreeStream(adaptor,"rule vars");
		RewriteRuleSubtreeStream stream_commands=new RewriteRuleSubtreeStream(adaptor,"rule commands");

		try {
			// While_ast.g:50:5: ( NOP -> ^( NOP_NODE ) | vars ASSIGN exprs -> ^( ASSIGN_NODE vars exprs ) | IF expression THEN commands ( ELSE commands )? FI -> ^( IF expression ^( BLOCK commands ) ( ^( ELSE commands ) )? ) | WHILE expression DO commands OD -> ^( WHILE expression ^( BLOCK commands ) ) | FOR expression DO commands OD -> ^( FOR expression ^( BLOCK commands ) ) | FOREACH VARIABLE IN expression DO commands OD -> ^( FOREACH VARIABLE expression ^( BLOCK commands ) ) )
			int alt5=6;
			switch ( input.LA(1) ) {
			case NOP:
				{
				alt5=1;
				}
				break;
			case VARIABLE:
				{
				alt5=2;
				}
				break;
			case IF:
				{
				alt5=3;
				}
				break;
			case WHILE:
				{
				alt5=4;
				}
				break;
			case FOR:
				{
				alt5=5;
				}
				break;
			case FOREACH:
				{
				alt5=6;
				}
				break;
			default:
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}
			switch (alt5) {
				case 1 :
					// While_ast.g:50:7: NOP
					{
					NOP20=(Token)match(input,NOP,FOLLOW_NOP_in_command327);  
					stream_NOP.add(NOP20);


					// AST REWRITE
					// elements: 
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 50:11: -> ^( NOP_NODE )
					{
						// While_ast.g:50:14: ^( NOP_NODE )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(NOP_NODE, "NOP_NODE"), root_1);
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 2 :
					// While_ast.g:52:7: vars ASSIGN exprs
					{
					pushFollow(FOLLOW_vars_in_command346);
					vars21=vars();
					state._fsp--;

					stream_vars.add(vars21.getTree());
					ASSIGN22=(Token)match(input,ASSIGN,FOLLOW_ASSIGN_in_command348);  
					stream_ASSIGN.add(ASSIGN22);

					pushFollow(FOLLOW_exprs_in_command350);
					exprs23=exprs();
					state._fsp--;

					stream_exprs.add(exprs23.getTree());

					// AST REWRITE
					// elements: vars, exprs
					// token labels: 
					// rule labels: retval
					// token list labels: 
					// rule list labels: 
					// wildcard labels: 
					retval.tree = root_0;
					RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

					root_0 = (CommonTree)adaptor.nil();
					// 52:25: -> ^( ASSIGN_NODE vars exprs )
					{
						// While_ast.g:52:28: ^( ASSIGN_NODE vars exprs )
						{
						CommonTree root_1 = (CommonTree)adaptor.nil();
						root_1 = (CommonTree)adaptor.becomeRoot((CommonTree)adaptor.create(ASSIGN_NODE, "ASSIGN_NODE"), root_1);
						adaptor.addChild(root_1, stream_vars.nextTree());
						adaptor.addChild(root_1, stream_exprs.nextTree());
						adaptor.addChild(root_0, root_1);
						}

					}


					retval.tree = root_0;

					}
					break;
				case 3 :
					// While_ast.g:54:7: IF expression THEN commands ( ELSE commands )? FI
					{
					IF24=(Token)match(input,IF,FOLLOW_IF_in_command373);  
					stream_IF.add(IF24);

					pushFollow(FOLLOW_expression_in_command375);
					expression25=expression();
					state._fsp--;

					stream_expression.add(expression25.getTree());
					THEN26=(Token)match(input,THEN,FOLLOW_THEN_in_command377);  
					stream_THEN.add(THEN26);

					pushFollow(FOLLOW_commands_in_command379);
					commands27=commands();
					state._fsp--;

					stream_commands.add(commands27.getTree());
					// While_ast.g:54:35: ( ELSE commands )?
					int alt4=2;
					int LA4_0 = input.LA(1);
					if ( (LA4_0==ELSE) ) {
						alt4=1;
					}
					switch (alt4) {
						case 1 :
							// While_ast.g:54:36: ELSE commands
							{
							ELSE28=(Token)match(input,ELSE,FOLLOW_ELSE_in_command382);  
							stream_ELSE.add(ELSE28);

							pushFollow(FOLLOW_commands_in_command384);
							commands29=commands();
							state._fsp--;

							stream_commands.add(commands29.getTree());
							}
							break;

					}

					FI30=(Token)match(input,FI,FOLLOW_FI_in_command388);  
					stream_FI.add(FI30);

